# The-GigaMIDI-dataset-with-loops-and-expressive-music-performance-detection

./: LICENSE  README.md  main.py  pyproject.toml
Analysis of Evaluation Set and Optimal Threshold Selection including Machine Learning Models/Curated Evaluation Set/MIDI Performance (Expressive MIDI Tracks)/: ASAP-Performance-Only.csv  ATEPP-Performance-Only-Total.csv  ATEPP-Performance-Only.csv  GiantPiano.csv  Groove+MAESTRO.csv  Groove-Total.csv  MAESTRO-Total.csv  Saarland.csv
Analysis of Evaluation Set and Optimal Threshold Selection including Machine Learning Models/Curated Evaluation Set/MIDI Score (Non-expressive MIDI Tracks)/: ASAP-Score-only.csv  ASAP-Score-only.numbers  ATEPP-Score-Final-refinement.csv  ATEPP-Score-Final-refinement.numbers  ATEPP-Score-Final.csv  ATEPP-Score-Final.numbers
Analysis of Evaluation Set and Optimal Threshold Selection including Machine Learning Models/Optimal Threshold Selection/: Expressive_Performance_Detection_Training-Percentile-threshold.csv
Analysis of Evaluation Set and Optimal Threshold Selection including Machine Learning Models/Saved Logistic Regression Models/: model-DNODR.pkl  model-DNVR.pkl  model-NOMML.pkl
GigaMIDI/: GigaMIDI.py  README.md  create_gigamidi_dataset.py
Note Onset Median Metric Level/: main.py
loops_nomml/: __init__.py  corr_mat.py  process_file.py
scripts/: analyze.ipynb  analyze_expressive.ipynb  analyze_gigamidi_dataset.py  dataset_programs_dist.py  dataset_short_files.py  main_expressive.py  nomml_gigamidi.py  test_extract.ipynb
tests/: test_nomml.py  test_run.py  utils_tests.py
tests/midi_files/: test_midi.mid
